# PaddleCustomDevice

backends/custom_cpu/kernels/: reshape_kernel.cc
backends/gcu/: CMakeLists.txt  README.md  README_cn.md  ci_test.sh  paddle_gcu_export.map  setup.py.in
backends/gcu/common/: flags.cc  gcu_op_runner.cc  gcu_op_runner.h  utils.cc  utils.h
backends/gcu/custom_engine/: custom_engine_interface.cc  custom_engine_interface.h  custom_engine_op.cc  custom_engine_op.h  gcu_engine.cc  gcu_engine.h  gcu_engine_compiler.cc  gcu_engine_compiler.h  gcu_engine_executor.cc  gcu_engine_executor.h
backends/gcu/custom_op/: fused_conv2d_transpose_bias_act_op.cc  my_add_n_op.cc  test_for_custom_engine_op.cc
backends/gcu/kernels/: activation_kernels.cc  adam_kernel.cc  binary_kernels.cc  conv_kernel.cc  conv_transpose_kernel.cc  cross_entropy_kernel.cc  diag_kernel.cc  diagonal_kernel.cc  dropout_kernel.cc  embedding_kernel.cc  eye_kernel.cc  full_kernel.cc  fused_conv2d_add_act_kernel.cc  grid_sample_kernel.cc  increment_kernel.cc  matmul_kernel.cc  nms_kernel.cc  reduce_kernels.cc  stack_kernel.cc  strided_slice_kernel.cc  take_along_axis.cc
backends/gcu/passes/: __init__.py  common.py  custom_addn_pass.cc  gcu_custom_passes.h  gcu_op_marker_pass.cc  gcu_replace_with_engine_op_pass.cc  gcu_sub_graph_extract_pass.cc
backends/gcu/runtime/: flags.h  runtime.cc  runtime.h
backends/intel_hpu/: CMakeLists.txt  setup.py.in
backends/intel_hpu/custom_ops/: setup.py
backends/intel_hpu/custom_ops/llama_infer/: fused_get_rotary_embedding.cc  fused_mlp.cc  fused_rms_mlp.cc  fused_rms_qkv_rope.cc  fused_rms_qkv_rope_v2.cc  fused_rms_qkv_rope_v3.cc  fused_sdpa_proj.cc  fused_sdpa_proj_dec.cc  fused_sdpa_proj_v2.cc  get_padding_offset.cc  ref_pp_kernels.cc
backends/intel_hpu/custom_ops/python/paddlenlp_ops/: __init__.py  layers.py
backends/intel_hpu/custom_ops/src/: fake_gpu_kernels.cc  index_copy.cc
backends/intel_hpu/custom_ops/tests/: test_fused_mlp.py  test_fused_rms_mlp.py  test_index_copy.py  test_inplace_cumsum.py  test_rms_qkv_rope.py  test_sdpa_proj.py
backends/intel_hpu/kernels/: any_kernel.cc  arange_kernel.cc  bitwise_kernel.cc  cast_kernel.cc  compare_kernel.cc  cum_kernel.cc  einsum_kernel.cc  elementwise_kernel.cc  full_kernel.cc  funcs.h  hpu_operator.cc  hpu_operator.h  index_select_kernel.cc  logical_kernel.cc  reduce_kernel.cc  rms_norm_kernel.cc  scale_kernel.cc  scatter_kernel.cc  sdpa.cc  sdpa_kernel.cc  set_value_kernel.cc  softmax_kernel.cc  split_kernel.cc  squeeze_kernel.cc  swiglu_kernel.cc  top_k.cc  top_p.cc  top_p_hpu.cc  unary_kernel.cc  where_kernel.cc
backends/intel_hpu/runtime/: runtime.cc  runtime.h
backends/intel_hpu/tests/: README.md  benchmark_paddlepaddle_cli.sh  config.py  inference_hpu.py  junitxml.py  pr-test-run.py  run_distributed_generation.sh  run_generation.py  test_kvcache.py  test_llama.py  test_llama_2x.sh  test_profiler.py
backends/intel_hpu/tests/ccl/: all2all.py  allgather.py  allreduce.py
backends/intel_hpu/tests/unittests/: api_base.py  test_abs_op.py  test_abs_op_eager.py  test_arg_max_op.py  test_cast.py  test_concat.py  test_contiguous.py  test_cumsum_op.py  test_elementwise_add_op.py  test_elementwise_div_op.py  test_elementwise_max_op.py  test_elementwise_min_op.py  test_elementwise_mod_op.py  test_elementwise_mul_op.py  test_elementwise_pow_op.py  test_elementwise_sub_op.py  test_expand.py  test_floor.py  test_full_like_op.py  test_full_op.py  test_gather.py  test_gather_nd.py  test_index_sample.py  test_index_select.py  test_logical_op.py  test_pow.py  test_reduce_any.py  test_reduce_max.py  test_reduce_mean.py  test_reduce_min.py  test_reduce_prod.py  test_reduce_sum.py  test_relu.py  test_rms_norm.py  test_scale.py  test_scatter_hpu.py  test_sigmoid.py  test_silu.py  test_sin.py  test_slice.py  (+13 more)
backends/intel_hpu/utils/: hpu_tracer.cc  hpu_tracer.h  utils.h
(+110 files in other folders)
